--- a/index.html
+++ b/index.html
@@ -13,19 +13,13 @@
 
     <h2>Section Title</h2>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam harum inventore quae? Aliquam laborum, delectus repellendus libero minus eaque exercitationem optio magni voluptatum itaque animi est eum, dolore veniam aliquid?
-    Odio culpa aut quas incidunt laboriosam nisi sapiente facilis veritatis rem in minus accusamus doloremque ipsam quibusdam id, officiis expedita, aperiam natus mollitia molestiae maxime. Voluptatem exercitationem placeat quia minus.
-    Deserunt quis perferendis rem autem omnis nostrum ut recusandae temporibus sint quisquam nulla amet aut nam maxime quae, odit, placeat consectetur debitis quas sequi ab eveniet quam! Quia, eum aspernatur!
-    Magni, in quibusdam assumenda sit accusamus vero corporis expedita fugit quia excepturi asperiores natus beatae non illum velit ipsam nihil necessitatibus culpa nam delectus blanditiis voluptas maxime! Nulla, ipsum earum.
-    Earum labore voluptatem culpa ducimus deserunt aliquam totam at suscipit? Amet sunt magni non ea animi ex dolore, cumque tenetur perferendis, earum culpa corrupti neque nesciunt quae corporis cum at.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam harum inventore quae? Aliquam laborum, delectus repellendus libero minus eaque exercitationem optio magni voluptatum itaque animi est eum, dolore veniam aliquid?</p>
 
     <h3>Section Title</h3>
 
-    <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nostrum qui pariatur accusamus ducimus distinctio nulla quisquam ratione, odio placeat tempora maiores nisi sapiente doloribus eos, dolorem deleniti doloremque unde!
-    Dolore deleniti, debitis voluptates, quidem voluptate nisi velit maxime voluptatum quibusdam eveniet doloremque repellat incidunt enim nobis suscipit sint minus amet omnis ullam, ea veniam! Obcaecati, libero veniam. Tempora, quasi!
-    Fugiat consectetur velit id odio repudiandae vero sit iure. Iure ut eveniet commodi nihil expedita, ad voluptates nesciunt nulla labore officiis et? Rem cupiditate saepe atque praesentium, qui quaerat cumque.
-    Veritatis numquam ut, illum natus, nesciunt eaque molestias harum, laboriosam voluptatibus aperiam tempore fugiat maxime dicta soluta assumenda libero corrupti! Ratione ad soluta ea dolorum, mollitia autem excepturi harum omnis?
-    Quaerat suscipit animi architecto? Sapiente voluptates placeat beatae iste ipsam iusto delectus necessitatibus voluptas quidem quaerat. Ipsa doloribus commodi reprehenderit minus molestias? Nulla consectetur earum amet deleniti natus alias optio.</section>
+    <section>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nostrum qui pariatur accusamus ducimus distinctio nulla quisquam ratione, odio placeat tempora maiores nisi sapiente doloribus eos, dolorem deleniti doloremque unde!</p> 
+    </section>
     <footer>&copy; mfgw</footer>
 </body>
 
